--- a/01-intro/HW1.ipynb
+++ b/01-intro/HW1.ipynb
@@ -2,36 +2,405 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 35,
    "id": "1ca4b8a5-0097-4869-afaf-e2f159c88940",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import numpy as np"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "60b8a435-a086-43d9-86ab-e4096378183d",
+   "id": "4f8f12e2-fb38-48b1-8dc4-7e0e0ab0e071",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/opt/conda/envs/ml-zoomcamp/bin/python\n"
-     ]
+     "data": {
+      "text/plain": [
+       "'2.3.2'"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "!which python"
+    "pd.__version__"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "60b8a435-a086-43d9-86ab-e4096378183d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.read_csv('https://raw.githubusercontent.com/alexeygrigorev/datasets/master/car_fuel_efficiency.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "6231c642-cbd5-4d1b-8d54-c92dc58cabef",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>engine_displacement</th>\n",
+       "      <th>num_cylinders</th>\n",
+       "      <th>horsepower</th>\n",
+       "      <th>vehicle_weight</th>\n",
+       "      <th>acceleration</th>\n",
+       "      <th>model_year</th>\n",
+       "      <th>origin</th>\n",
+       "      <th>fuel_type</th>\n",
+       "      <th>drivetrain</th>\n",
+       "      <th>num_doors</th>\n",
+       "      <th>fuel_efficiency_mpg</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>170</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>159.0</td>\n",
+       "      <td>3413.433759</td>\n",
+       "      <td>17.7</td>\n",
+       "      <td>2003</td>\n",
+       "      <td>Europe</td>\n",
+       "      <td>Gasoline</td>\n",
+       "      <td>All-wheel drive</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>13.231729</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>130</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>97.0</td>\n",
+       "      <td>3149.664934</td>\n",
+       "      <td>17.8</td>\n",
+       "      <td>2007</td>\n",
+       "      <td>USA</td>\n",
+       "      <td>Gasoline</td>\n",
+       "      <td>Front-wheel drive</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>13.688217</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>170</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>78.0</td>\n",
+       "      <td>3079.038997</td>\n",
+       "      <td>15.1</td>\n",
+       "      <td>2018</td>\n",
+       "      <td>Europe</td>\n",
+       "      <td>Gasoline</td>\n",
+       "      <td>Front-wheel drive</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>14.246341</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>220</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2542.392402</td>\n",
+       "      <td>20.2</td>\n",
+       "      <td>2009</td>\n",
+       "      <td>USA</td>\n",
+       "      <td>Diesel</td>\n",
+       "      <td>All-wheel drive</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>16.912736</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>210</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>140.0</td>\n",
+       "      <td>3460.870990</td>\n",
+       "      <td>14.4</td>\n",
+       "      <td>2009</td>\n",
+       "      <td>Europe</td>\n",
+       "      <td>Gasoline</td>\n",
+       "      <td>All-wheel drive</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>12.488369</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   engine_displacement  num_cylinders  horsepower  vehicle_weight  \\\n",
+       "0                  170            3.0       159.0     3413.433759   \n",
+       "1                  130            5.0        97.0     3149.664934   \n",
+       "2                  170            NaN        78.0     3079.038997   \n",
+       "3                  220            4.0         NaN     2542.392402   \n",
+       "4                  210            1.0       140.0     3460.870990   \n",
+       "\n",
+       "   acceleration  model_year  origin fuel_type         drivetrain  num_doors  \\\n",
+       "0          17.7        2003  Europe  Gasoline    All-wheel drive        0.0   \n",
+       "1          17.8        2007     USA  Gasoline  Front-wheel drive        0.0   \n",
+       "2          15.1        2018  Europe  Gasoline  Front-wheel drive        0.0   \n",
+       "3          20.2        2009     USA    Diesel    All-wheel drive        2.0   \n",
+       "4          14.4        2009  Europe  Gasoline    All-wheel drive        2.0   \n",
+       "\n",
+       "   fuel_efficiency_mpg  \n",
+       "0            13.231729  \n",
+       "1            13.688217  \n",
+       "2            14.246341  \n",
+       "3            16.912736  \n",
+       "4            12.488369  "
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "9edaf062",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(9704, 11)"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.shape\n",
+    "#df.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "4535ab9d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "fuel_type\n",
+       "Gasoline    4898\n",
+       "Diesel      4806\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['fuel_type'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "e9da2223",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "engine_displacement    False\n",
+       "num_cylinders           True\n",
+       "horsepower              True\n",
+       "vehicle_weight         False\n",
+       "acceleration            True\n",
+       "model_year             False\n",
+       "origin                 False\n",
+       "fuel_type              False\n",
+       "drivetrain             False\n",
+       "num_doors               True\n",
+       "fuel_efficiency_mpg    False\n",
+       "dtype: bool"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.isna().sum() > 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "744b5bc9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "23.759122836520497"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[df['origin'] == 'Asia']['fuel_efficiency_mpg'].max()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "122224cc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_5482/3304100184.py:3: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
+      "The behavior will change in pandas 3.0. This inplace method will never work because the intermediate object on which we are setting values always behaves as a copy.\n",
+      "\n",
+      "For example, when doing 'df[col].method(value, inplace=True)', try using 'df.method({col: value}, inplace=True)' or df[col] = df[col].method(value) instead, to perform the operation inplace on the original object.\n",
+      "\n",
+      "\n",
+      "  df['horsepower'].fillna(hp_mode, inplace=True)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'hp_median': 149.0, 'hp_median_imputed': 152.0}"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "hp_median = df['horsepower'].median()\n",
+    "hp_mode = df['horsepower'].mode()[0]\n",
+    "df['horsepower'].fillna(hp_mode, inplace=True) \n",
+    "hp_median_imputed = df['horsepower'].median()\n",
+    "{'hp_median': hp_median, 'hp_median_imputed': hp_median_imputed}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "75b896be",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = np.array(df[df['origin'] == 'Asia'][['vehicle_weight', 'model_year']][0:7])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "4f5720f6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "XTX = (x.T).dot(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "id": "c1299e1f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "XTX_i = np.linalg.inv(XTX)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "7e6ec614",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y =np.array( [1100, 1300, 800, 900, 1000, 1100, 1200])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "id": "2b9305f7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "w = XTX_i.dot(x.T).dot(y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "id": "ead39ae3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.float64(0.5187709081074002)"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "w.sum()"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "ml-zoomcamp",
    "language": "python",
    "name": "python3"
   },
